# MUFCalc

./: installer.iss
.github/workflows/: build-installer.yml  main.yml
MUFCalc/: .gitignore  BUILD.md  CMakeLists.txt  MUFCalc.pro  README.md  installer.iss
MUFCalc/docs/: architecture.md
MUFCalc/include/: aboutdialog.h  dataentrywizard.h  datatypes.h  diagnosticsengine.h  historymanager.h  mainwindow.h  mufengine.h  nucleartransferitemdb.h  reportgenerator.h  resultspanel.h  styles.h  uncertaintyengine.h  userguidedialog.h  validationengine.h  virtualfacilitydialog.h
MUFCalc/resources/: MUFCalc_Flowchart.html  MUFCalc_IAEA_Formula_Guide.docx  resources.qrc
MUFCalc/scripts/: build_linux.sh
MUFCalc/src/: aboutdialog.cpp  dataentrywizard.cpp  diagnosticsengine.cpp  historymanager.cpp  main.cpp  mainwindow.cpp  mufengine.cpp  reportgenerator.cpp  resultspanel.cpp  uncertaintyengine.cpp  userguidedialog.cpp  validationengine.cpp  virtualfacilitydialog.cpp
MUFCalc/src/app/: Application.cpp  Application.h  Constants.h  Styles.h
MUFCalc/src/core/: ContributionAnalyzer.cpp  ContributionAnalyzer.h  DiagnosticEngine.cpp  DiagnosticEngine.h  MufCalculator.cpp  MufCalculator.h  SignificantQuantity.cpp  SignificantQuantity.h  StatisticalEvaluator.cpp  StatisticalEvaluator.h  Types.h  UncertaintyEngine.cpp  UncertaintyEngine.h
MUFCalc/src/database/: HistoryRepository.cpp  HistoryRepository.h
MUFCalc/src/gui/: AboutDialog.cpp  AboutDialog.h  DataEntryWizard.cpp  DataEntryWizard.h  DiagnosticsTab.cpp  DiagnosticsTab.h  EquationsTab.cpp  EquationsTab.h  FeedbackDialog.cpp  FeedbackDialog.h  MainWindow.cpp  MainWindow.h  MeasurementMethodDb.h  ResultsPanel.cpp  ResultsPanel.h  StudentGuideDialog.cpp  StudentGuideDialog.h  SummaryTab.cpp  SummaryTab.h  UncertaintyTab.cpp  UncertaintyTab.h  VirtualFacilityDialog.cpp  VirtualFacilityDialog.h  WatermarkWidget.h  local_token.h.example
MUFCalc/src/reports/: HtmlReport.cpp  HtmlReport.h  PlainTextReport.cpp  PlainTextReport.h  ReportGenerator.cpp  ReportGenerator.h
MUFCalc/src/utils/: FormatUtils.h  MathUtils.h  Validator.cpp  Validator.h
MUFCalc/tests/: CMakeLists.txt
MUFCalc/tests/unit/: TestDiagnosticEngine.cpp  TestMufCalculator.cpp  TestSignificantQuantity.cpp
